# DynamicCodeMonitorAndReplace-pipeline

./: README.md  check.sh  debug.keystore  joker.new.aligned.apk.idsig  main.js  notes.md  requirements.txt  run.py
agent-dex/: Agent.java  classes.dex
agent-so/: CMakeLists.txt  main.cpp
frida-servers/: notes
malicious-dex/: Malicious.java  classes.dex
malware-server/: server.py
testappandroidstudio/: settings.gradle
testappandroidstudio/app/: build.gradle
testappandroidstudio/app/src/main/: AndroidManifest.xml
testappandroidstudio/app/src/main/cpp/: CMakeLists.txt  testapp_android_studio.cpp
testappandroidstudio/app/src/main/java/com/example/testapp_android_studio/: MainActivity.java
testappandroidstudio/app/src/main/res/values/: strings.xml  themes.xml
testappandroidstudio/app/src/main/res/values-night/: themes.xml
testappandroidstudio/gradle/wrapper/: gradle-wrapper.properties
